// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isOpen: false, isPrimary: true and isSecondaryScrollerVisible: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete, background var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none !important;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 0;
    transform: translate3d(-100%,0,0);
    transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  .drawer:dir(rtl) {
    transform: translate3d(100%,0,0);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,var(--_p-b) 0%,var(--_p-b) 50%,var(--_p-c) 50%,var(--_p-c) 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,var(--_p-c) 0%,var(--_p-c) 50%,var(--_p-b) 50%,var(--_p-b) 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      margin-top: 2px;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: false and isSecondaryScrollerVisible: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
}

@media(max-width:759px) {
    slot {
      display: grid;
      grid-area: 4/2/auto/-2;
      z-index: 0;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(1, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .scroller::before {
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      z-index: 1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: false and isSecondaryScrollerVisible: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    ::slotted(*:not([primary],[cascade])) {
      display: none !important;
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none !important;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,var(--_p-b) 0%,var(--_p-b) 50%,var(--_p-c) 50%,var(--_p-c) 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,var(--_p-c) 0%,var(--_p-c) 50%,var(--_p-b) 50%,var(--_p-b) 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: true and isSecondaryScrollerVisible: false 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: grid;
      grid-area: 4/2/auto/-2;
      z-index: 0;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(1, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .scroller::before {
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      z-index: 1;
      background: linear-gradient(180deg,var(--_p-b) 0%,var(--_p-b) 65%,transparent 100%);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: true and isSecondaryScrollerVisible: true 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none !important;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,var(--_p-b) 0%,var(--_p-b) 50%,var(--_p-c) 50%,var(--_p-c) 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,var(--_p-c) 0%,var(--_p-c) 50%,var(--_p-b) 50%,var(--_p-b) 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      margin-top: 2px;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: true and isSecondaryScrollerVisible: true 2`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none !important;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,var(--_p-b) 0%,var(--_p-b) 50%,var(--_p-c) 50%,var(--_p-c) 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,var(--_p-c) 0%,var(--_p-c) 50%,var(--_p-b) 50%,var(--_p-b) 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      margin-top: 2px;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true, isPrimary: true and isSecondaryScrollerVisible: true 3`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    --_p-a: var(--p-color-primary) !important;
    --_p-b: var(--p-color-canvas) !important;
    --_p-c: var(--p-color-surface) !important;
    --_p-d: var(--p-color-backdrop) !important;
    --_p-f: rgba(255,255,255,.01) !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  ::slotted(*) {
    --p-drilldown-grid-template: auto/auto;
    --p-drilldown-gap: clamp(4px, 0.25vw + 3px, 8px);
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: var(--_p-d);
    transition: background var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      grid-area: 3/2/auto/-2;
      display: grid;
      grid-template: var(--p-drilldown-grid-template,auto/auto);
      gap: var(--p-drilldown-gap,clamp(4px, 0.25vw + 3px, 8px));
      align-content: start;
      align-items: start;
      box-sizing: border-box;
      min-height: 100%;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, .4s) cubic-bezier(.25,.1,.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none !important;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: var(--_p-f);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,var(--_p-b) 0%,var(--_p-b) 50%,var(--_p-c) 50%,var(--_p-c) 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,var(--_p-c) 0%,var(--_p-c) 50%,var(--_p-b) 50%,var(--_p-b) 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: var(--_p-c);
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: var(--_p-b);
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-color-primary: hsl(225, 100%, 99%);
      --p-color-frosted: hsla(240, 2%, 43%, 0.228);
      --p-color-frosted-soft: hsla(240, 3.7%, 26.5%, 0.154);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: var(--_p-b);
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: var(--_p-b);
    }
    .dismiss-mobile {
      width: fit-content;
      height: fit-content;
      place-self: start end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      margin-top: 2px;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: start;
      z-index: 2;
    }
}
"
`;
